[package]
name = "dungeon_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = { version = "0.2.3" }
num = "0.4.2"
sdl2 = {version = "0.36.0", features = ["raw-window-handle"]}
stb_image = "0.3.0"
ash-bootstrap = {git = "https://github.com/SimonBorghese/vk-firewood-rs", branch = "main", features = ["raw-window-handle"]}
vk-mem = {git = "https://github.com/SimonBorghese/vk-mem-rs", branch = "master"}
ash = {version = "0.37.3+1.3.251", features = ["libloading", "loaded", "linked"]}
imgui = "0.11.0"
imgui-sdl2 = "0.15.3"
imgui-rs-vulkan-renderer = {version = "1.12.0", features = ["dynamic-rendering"]}
russimp = {version = "3.2.0"}
log = "0.4.21"